Fix z-index

--- a/app/assets/stylesheets/catalog.scss
+++ b/app/assets/stylesheets/catalog.scss
@@ -69,7 +69,7 @@ body{
 .taxons-container{
   margin-top: -50px;
   position: relative;
-  z-index: 99999999;
+  z-index: 999999;
   @media (max-width: 768px){
     margin-top: -25px;
     li{
